--- a/suprise.html
+++ b/suprise.html
@@ -226,6 +226,7 @@ for (let y = 0; y < rows; y++) {
     }
   }
 }
+wallSprites[goal.y][goal.x] = 'goal';
 
 function updateCamera() {
   const maxX = cols * tileSize - viewWidth;
