--- a/suprise.html
+++ b/suprise.html
@@ -338,19 +338,9 @@ function movePlayer(dx, dy) {
   const newX = player.x + dx;
   const newY = player.y + dy;
 
-  console.log(
-    "Attempt move:",
-    `from (${player.x}, ${player.y}) to (${newX}, ${newY}) |`,
-    "maze[newY][newX] =",
-    maze[newY] ? maze[newY][newX] : "undefined"
-  );
-
   if (maze[newY] && maze[newY][newX] === 0) {
     player.x = newX;
     player.y = newY;
-    console.log("Move successful to:", player.x, player.y);
-  } else {
-    console.warn("Blocked by wall or out of bounds at:", newX, newY);
   }
 
   player.direction =
@@ -362,7 +352,7 @@ function checkWin() {
   const msg = document.getElementById('winMessage');
   msg.textContent = (player.x === goal.x && player.y === goal.y)
     ? "You reached the castle!"
-    : "Reach the castle";
+    : "Find the castle";
 }
 
 // Movement speed (ms per step)
