--- a/suprise.html
+++ b/suprise.html
@@ -64,7 +64,7 @@ layout: default
 <body>
 
 <div id="gameContainer">
-  <h2 id="winMessage">Reach the castle</h2>
+  <h2 id="winMessage">Find the castle</h2>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
@@ -430,7 +430,7 @@ function gameLoop(timestamp) {
     player.x = lerp(player.x, targetPX, MOVE_LERP);
     player.y = lerp(player.y, targetPY, MOVE_LERP);
 
-    if (abs(player.x - targetPX) < 1 && abs(player.y - targetPY) < 1) {
+    if (Math.abs(player.x - targetPX) < 0.5 && Math.abs(player.y - targetPY) < 0.5) {
       player.moving = false;
     }
 
