--- a/suprise.html
+++ b/suprise.html
@@ -59,7 +59,7 @@ layout: default
   }
 
   #dialogueBox {
-  width: 400px;
+  width: 380px;
   min-height: 80px;
   background-color: #f8f8f8;
   border: 4px solid #000;
@@ -67,7 +67,7 @@ layout: default
   padding: 10px 16px;
   margin-top: 20px;
   font-family: 'Press Start 2P', monospace;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 1.5;
   color: #000;
   box-shadow: 4px 4px 0 #333;
@@ -105,7 +105,7 @@ layout: default
 
 <div id="gameContainer">
   <div id="dialogueBox">
-  <p id="winMessage">Find the castle</p>
+  <p id="winMessage">Explore my website using this maze</p>
   </div>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
@@ -403,7 +403,7 @@ function checkWin() {
   const msg = document.getElementById('winMessage');
   msg.textContent = (Math.round(player.x) === Math.round(goal.x) && Math.round(player.y) === Math.round(goal.y))
     ? "You reached the castle!"
-    : "Find the castle";
+    : "Explore my website using this maze";
 }
 
 // Movement speed (ms per step)
