--- a/suprise.html
+++ b/suprise.html
@@ -24,10 +24,7 @@ layout: default
     align-items: center;
     margin-top: 20px;
   }
-  #winMessage {
-    margin-top: 10px;
-    text-align: center; /* center the text */
-  }
+  
   #controls {
     margin-top: 15px;
     display: flex;
@@ -59,7 +56,7 @@ layout: default
   }
 
   #dialogueBox {
-  width: 380px;
+  width: 360px;
   min-height: 80px;
   background-color: #f8f8f8;
   border: 4px solid #000;
@@ -97,6 +94,16 @@ layout: default
 #winMessage {
   margin: 0;
   white-space: pre-line;
+  min-height: 40px;
+}
+
+.typing {
+  border-right: 2px solid #000;
+  animation: blinkCursor 0.8s steps(2, start) infinite;
+}
+
+@keyframes blinkCursor {
+  to { border-color: transparent; }
 }
 
 #dialogueChoices {
@@ -428,27 +435,28 @@ function checkWin() {
   const choiceBox = document.getElementById('dialogueChoices');
 
   if (player.x === goal.x && player.y === goal.y) {
-    msg.textContent = "You reached the castle!\nGo inside?";
-    choiceBox.innerHTML = `
-      <button class="dialogue-btn" id="yesBtn">Yes</button>
-      <button class="dialogue-btn" id="noBtn">No</button>
-    `;
+    typeDialogue("You reached the castle!\nGo inside?", () => {
+      choiceBox.innerHTML = `
+        <button class="dialogue-btn" id="yesBtn">Yes</button>
+        <button class="dialogue-btn" id="noBtn">No</button>
+      `;
 
-    // Handle button clicks
-    document.getElementById("yesBtn").onclick = () => {
-      window.location.href = "/";  // <-- redirect destination
-    };
+      document.getElementById("yesBtn").onclick = () => {
+        window.location.href = "/castle.html";  // <-- destination page
+      };
 
-    document.getElementById("noBtn").onclick = () => {
-      msg.textContent = "You decide to stay outside.";
-      choiceBox.innerHTML = "";
-    };
-
+      document.getElementById("noBtn").onclick = () => {
+        typeDialogue("You decide to stay outside.", () => {
+          choiceBox.innerHTML = "";
+        });
+      };
+    });
   } else {
     msg.textContent = "Find the castle";
     choiceBox.innerHTML = "";
   }
 }
+
 
 // Movement speed (ms per step)
 const MOVE_INTERVAL = 200;
