updating suprise 3 page

--- a/suprise.html
+++ b/suprise.html
@@ -492,6 +492,7 @@ function checkWin() {
 const MOVE_INTERVAL = 200;
 let moveInterval = null;
 let gameFrozen = false;
+let hasWon = false;
 
 // Mapping of direction names to (dx, dy)
 const dirs = {
