updating suprise 3 page

--- a/suprise.html
+++ b/suprise.html
@@ -145,7 +145,7 @@ layout: default
 
 <div id="gameContainer">
   <div id="dialogueBox">
-  <p id="winMessage">Find the castle</p>
+  <p id="winMessage">Explore my website using this maze. Solving will take you to a random page on my site. The maze is randomly generated and will change each time you visit this page. Enjoy! </p>
   <div id="dialogueChoices"></div>
   </div>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
@@ -244,7 +244,7 @@ function loadImages(callback) {
 
   const extras = [
     // Game objects
-    'goal.svg',
+    'goal.png',
     // Player idle frames
     'player_idle_down_0.png',
     'player_idle_up_0.png',
@@ -499,7 +499,7 @@ function checkWin() {
   } 
   else if (!hasWon) {
     // Only log when not at goal
-    msg.textContent = "Find the castle";
+    msg.textContent = "Explore my website using this maze. Solving will take you to a random page on my site. The maze is randomly generated and will change each time you visit this page. Enjoy!";
     choiceBox.innerHTML = "";
   }
 }
